--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,29 @@
+.wrapper{
+    padding: 50px 0px;
+    width: 300px;
+}    
+
+
+.my-input{
+}
+
+hr{
+    width: 300px;
+}
+
 .task-item{
-    background-color: rgb(183, 233, 244);
+    background-color: rgb(255, 255, 255);
     list-style-type: none;
     width: 300px;
-    height: 80px;
-    line-height: 60px;
+    height: 50px;
+    line-height: 30px;
     vertical-align: middle;
     padding: 10px;
-    margin: 10px 0;
     display: flex;
     justify-content: space-between;
+    border: 0.5px solid rgb(194, 194, 194);
+    border-radius: 15px;
+    margin: 10px 0;
 }
 
 .done{
